examples/test/testpolicy324.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy324
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key24: value27
      key48: value48
      key15: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value40
          key25: value14
          key11: value15
      podSelector:
        matchLabels:
          key28: value15
          key18: value17
          key2: value1
